# Authentication

./: .env  Cargo.toml  README.md
backend/migrations/: 20240316070714_users_table.up.sql
backend/settings/: base.yaml  production.yaml
backend/src/: main.rs  settings.rs  startup.rs  telemetry.rs
backend/src/routes/: health.rs
backend/src/utils/auth/: password.rs  token.rs
migrations/: 20240414093411_users_table.up.sql
settings/: base.yaml  development.yaml  production.yaml
src/: lib.rs  main.rs  settings.rs  startup.rs  telemetry.rs
src/routes/: health.rs  mod.rs
src/routes/users/: confirm_registration.rs  login.rs  logout.rs  mod.rs  register.rs
src/types/: general.rs  mod.rs  token.rs  users.rs
src/utils/: emails.rs  mod.rs
src/utils/auth/: mod.rs  password.rs  tokens.rs
templates/: verification_email.html
