[package]
name = "Authentication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backend"

[dependencies]
actix-web = "4.5.1"
config = { version = "0.14.0", features = ["yaml"] }
dotenv = "0.15.0"
serde = "1.0.197"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
"fmt",
"std",
"env-filter",
"registry",
"json",
"tracing-log"] }