[package]
name = "Authentication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "backend/src/lib.rs"

[[bin]]
path = "backend/src/main.rs"
name = "Authentication"

[dependencies]
actix-web = "4.5.1"
config = { version = "0.14.0", features = ["yaml"] }
dotenv = "0.15.0"
serde = "1.0.197"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "fmt",
    "std",
    "env-filter",
    "registry",
    "json",
    "tracing-log"] }
sqlx = { version = "0.6.0", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
deadpool-redis = "0.14.0"
pasetors = "0.6.8"
once_cell = "1.19.0"
hex = "0.4.3"
chrono = "0.4.35"
argon2 = "0.5.3"
uuid = { version = "1.7.0", features = ["v4", "serde"]}
serde_json = { version = "1.0.114", features = ["raw_value"]}
minijinja = "1.0.12"
lettre = { version = "0.11.4", features = ["builder", "tokio1-native-tls"] }
