[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backend"

[dependencies]
actix-web = "4"
config = { version = "0.13.3", features = ["yaml"] }
dotenv = "0.15.0"
serde = "1.0.160"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [
    "fmt",
    "std",
    "env-filter",
    "registry",
    "json",
    "tracing-log"] }
sqlx = { version = "0.6.0", features = [
    "runtime-actix-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
deadpool-redis = "0.11.0"
pasetors = "0.6.8"
once_cell = "1.19.0"
hex = "0.4"
chrono = { version = "0.4.35", features = ["serde"] }
argon2 = "0.5.3"
uuid = { version = "1.0.0", features = ["v4", "serde"]}
serde_json = { version = "1.0.0", features = ["raw_value"]}
minijinja = { version = "0.32.0", features = ["source"] }
lettre = { version = "0.10.0", features = ["builder", "tokio1-native-tls"] }